@@ -37,6 +37,10 @@ Don't use C<&> to call subroutines
 
 Don't use bareword filehandles other than built-ins
 
+=item L<Perl::Critic::Policy::Freenode::ConditionalImplicitReturn>
+
+Don't end a subroutine with a conditional block
+
 =item L<Perl::Critic::Policy::Freenode::DeprecatedFeatures>
 
 Avoid features that have been deprecated or removed from Perl
