@@ -1,6 +1,9 @@
 requires 'perl'         => '5.010001';
+requires 'Carp';
+requires 'Exporter';
 requires 'List::Util'   => '1.33';
 requires 'parent';
 requires 'Perl::Critic' => '1.126';
 requires 'Perl::Critic::Policy::Subroutines::ProhibitAmpersandSigils' => '1.125';
+requires 'Scalar::Util';
 requires 'version';
